--- a/main.ipynb
+++ b/main.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tổng thu nhập là: 80.0 triệu/tháng\n",
-      "Số người phụ thuộc là: 5.0 người\n",
-      "=> Thuế TNCN phải đóng là: 11.75 triệu/tháng\n"
+      "Tổng thu nhập là: 90000000 / tháng\n",
+      "Số người phụ thuộc là: 5 người\n",
+      "=> Thu nhập tính thuế là: 57000000 / tháng\n",
+      "=> Thuế TNCN phải đóng là: 11250000 / tháng\n"
      ]
     }
    ],
@@ -26,47 +27,48 @@
     "    thunhaptinhthue = float(input('Nhập thu nhập tính thuế (triệu/tháng): '))\n",
     "    if thunhaptinhthue <= 0:\n",
     "        print('Không chịu thuế TNCN do không có thu nhập tính thuế')\n",
-    "    elif thunhaptinhthue <= 5 :\n",
+    "    elif thunhaptinhthue <= 5000000 :\n",
     "        thuetncn = thunhaptinhthue * 0.05\n",
-    "    elif thunhaptinhthue > 5 and thunhaptinhthue <= 10:\n",
-    "        thuetncn = thunhaptinhthue * 0.10\n",
-    "    elif thunhaptinhthue > 10 and thunhaptinhthue <= 18:\n",
-    "        thuetncn = thunhaptinhthue * 0.15\n",
-    "    elif thunhaptinhthue > 18 and thunhaptinhthue <= 32:\n",
-    "        thuetncn = thunhaptinhthue * 0.2\n",
-    "    elif thunhaptinhthue > 32 and thunhaptinhthue <= 52:\n",
-    "        thuetncn = thunhaptinhthue * 0.25\n",
-    "    elif thunhaptinhthue > 52 and thunhaptinhthue <= 80:\n",
-    "        thuetncn = thunhaptinhthue * 0.3\n",
+    "    elif thunhaptinhthue > 5000000 and thunhaptinhthue <= 10000000:\n",
+    "        thuetncn = 5000000*0.05 + (thunhaptinhthue-5000000) * 0.10\n",
+    "    elif thunhaptinhthue > 10000000 and thunhaptinhthue <= 18000000:\n",
+    "        thuetncn = 5000000*0.05 + (10000000-5000000)*0.10 + (thunhaptinhthue-10000000) * 0.15\n",
+    "    elif thunhaptinhthue > 18000000 and thunhaptinhthue <= 32000000:\n",
+    "        thuetncn = 5000000*0.05 + (10000000-5000000)*0.10 + (18000000-10000000)*0.15 + (thunhaptinhthue-18000000) * 0.2\n",
+    "    elif thunhaptinhthue > 32000000 and thunhaptinhthue <= 52000000:\n",
+    "        thuetncn = 5000000*0.05 + (10000000-5000000)*0.10 + (18000000-10000000)*0.15 + (32000000-18000000)* 0.2 + (thunhaptinhthue-32000000) * 0.25\n",
+    "    elif thunhaptinhthue > 52000000 and thunhaptinhthue <= 80000000:\n",
+    "        thuetncn = 5000000*0.05 + (10000000-5000000)*0.10 + (18000000-10000000)*0.15 + (32000000-18000000)* 0.2 + (52000000-32000000)*0.25 + (thunhaptinhthue-52000000) * 0.3\n",
     "    else:\n",
-    "        thuetncn = thunhaptinhthue * 0.35\n",
-    "    print('Thu nhập tính thuế là:', str(thunhaptinhthue) + ' triệu/tháng')\n",
-    "    print('=> Thuế TNCN phải đóng là:', str(thuetncn) + ' triệu/tháng')\n",
+    "        thuetncn = 5000000*0.05 + (10000000-5000000)*0.10 + (18000000-10000000)*0.15 + (32000000-18000000)* 0.2 + (52000000-32000000)*0.25 + (80000000-52000000)*0.3 + (thunhaptinhthue-80000000) * 0.35\n",
+    "    print('Thu nhập tính thuế là:', str(thunhaptinhthue) + ' /tháng')\n",
+    "    print('=> Thuế TNCN phải đóng là:', str(thuetncn) + ' /tháng')\n",
     "elif option == 2:\n",
-    "    tongthunhap = float(input('Nhập tổng thu nhập (triệu/tháng): '))\n",
-    "    songuoiphuthuoc = float(input('Nhập số người phụ thuộc (người): '))\n",
+    "    tongthunhap = int(input('Nhập tổng thu nhập (/tháng): '))\n",
+    "    songuoiphuthuoc = int(input('Nhập số người phụ thuộc (người): '))\n",
     "\n",
     "    # tính thu nhập chịu thuế: thu nhập chịu thuế = Tổng thu nhập - giảm trừ bản thân(11)- số người phụ thuộc *4.4, thuế suất thì sẽ căn cứ vào các mức theo quy định nhà nước, 5tr đầu tính 5%, 5tr tiếp theo 10%... lũy tiến bạn có thể search là ra\n",
-    "    thunhaptinhthue = tongthunhap - 11 - (songuoiphuthuoc*4.4)\n",
+    "    thunhaptinhthue = tongthunhap - 11000000 - (songuoiphuthuoc*4400000)\n",
     "    if thunhaptinhthue <= 0:\n",
     "        print('Không chịu thuế TNCN do không có thu nhập tính thuế')\n",
-    "    elif thunhaptinhthue <= 5 :\n",
+    "    elif thunhaptinhthue <= 5000000 :\n",
     "        thuetncn = thunhaptinhthue * 0.05\n",
-    "    elif thunhaptinhthue > 5 and thunhaptinhthue <= 10:\n",
-    "        thuetncn = thunhaptinhthue * 0.10\n",
-    "    elif thunhaptinhthue > 10 and thunhaptinhthue <= 18:\n",
-    "        thuetncn = thunhaptinhthue * 0.15\n",
-    "    elif thunhaptinhthue > 18 and thunhaptinhthue <= 32:\n",
-    "        thuetncn = thunhaptinhthue * 0.20\n",
-    "    elif thunhaptinhthue > 32 and thunhaptinhthue <= 52:\n",
-    "        thuetncn = thunhaptinhthue * 0.25\n",
-    "    elif thunhaptinhthue > 52 and thunhaptinhthue <= 80:\n",
-    "        thuetncn = thunhaptinhthue * 0.30\n",
+    "    elif thunhaptinhthue > 5000000 and thunhaptinhthue <= 10000000:\n",
+    "        thuetncn = 5000000*0.05 + (thunhaptinhthue-5000000) * 0.10\n",
+    "    elif thunhaptinhthue > 10000000 and thunhaptinhthue <= 18000000:\n",
+    "        thuetncn = 5000000*0.05 + (10000000-5000000)*0.10 + (thunhaptinhthue-10000000) * 0.15\n",
+    "    elif thunhaptinhthue > 18000000 and thunhaptinhthue <= 32000000:\n",
+    "        thuetncn = 5000000*0.05 + (10000000-5000000)*0.10 + (18000000-10000000)*0.15 + (thunhaptinhthue-18000000) * 0.2\n",
+    "    elif thunhaptinhthue > 32000000 and thunhaptinhthue <= 52000000:\n",
+    "        thuetncn = 5000000*0.05 + (10000000-5000000)*0.10 + (18000000-10000000)*0.15 + (32000000-18000000)* 0.2 + (thunhaptinhthue-32000000) * 0.25\n",
+    "    elif thunhaptinhthue > 52000000 and thunhaptinhthue <= 80000000:\n",
+    "        thuetncn = 5000000*0.05 + (10000000-5000000)*0.10 + (18000000-10000000)*0.15 + (32000000-18000000)* 0.2 + (52000000-32000000)*0.25 + (thunhaptinhthue-52000000) * 0.3\n",
     "    else:\n",
-    "        thuetncn = thunhaptinhthue * 0.35\n",
-    "    print('Tổng thu nhập là:', str(tongthunhap) + ' triệu/tháng')\n",
+    "        thuetncn = 5000000*0.05 + (10000000-5000000)*0.10 + (18000000-10000000)*0.15 + (32000000-18000000)* 0.2 + (52000000-32000000)*0.25 + (80000000-52000000)*0.3 + (thunhaptinhthue-80000000) * 0.35\n",
+    "    print('Tổng thu nhập là:', str(tongthunhap) + ' / tháng')\n",
     "    print('Số người phụ thuộc là:', str(songuoiphuthuoc) + ' người')\n",
-    "    print('=> Thuế TNCN phải đóng là:', str(thuetncn) + ' triệu/tháng')\n",
+    "    print('=> Thu nhập tính thuế là:', str(thunhaptinhthue) + ' / tháng')\n",
+    "    print('=> Thuế TNCN phải đóng là:', str(round(thuetncn)) + ' / tháng')\n",
     "\n",
     "else:\n",
     "    print('Thông tin không đúng')\n"
